# emulaunch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cargo-dist.toml  dist-workspace.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  emulators.rs  main.rs  theme.rs
wix/: main.wxs
