[package]
name = "emulaunch"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ArnabXD/emulaunch"

[[bin]]
name = "emulaunch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
