[package]
name = "emulaunch"
version = "0.2.1"
edition = "2021"
authors = ["ArnabXD"]
description = "Interactive TUI for listing and launching Android emulators and iOS simulators"
license = "MIT"
repository = "https://github.com/ArnabXD/emulaunch"

[package.metadata.wix]
upgrade-guid = "4DA9601E-80B6-45F8-AFE3-3FB1B1097C11"
path-guid = "61A8152C-F45C-4136-B94E-0C74E9C37475"
license = false
eula = false

[[bin]]
name = "emulaunch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
